add pagination info
